<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical"
    tools:context="kr.o3selab.homecoco.Activities.Member.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:id="@+id/login_form_email"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_form"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3px"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_login_email" />

        <EditText
            android:id="@+id/login_form_email_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3px"
            android:background="@drawable/login_form_edittext"
            android:hint="@string/member_form_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="#656565"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_form_email_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/member_form_email_error"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_form"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3px"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_login_password" />

        <EditText
            android:id="@+id/login_form_password_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="3px"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3px"
            android:background="@drawable/login_form_edittext"
            android:hint="@string/member_form_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="#656565"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_form_password_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/member_form_password_error"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form_email_login_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/login_form_member_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/login_facebook"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/login_form_facebook_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form_google_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/login_google"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/login_form_google_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form_register_button"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorReverse"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/login_form_register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>