<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@drawable/register_logo" />

        <LinearLayout
            android:id="@+id/register_form_email"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3px"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_login_email" />

            <EditText
                android:id="@+id/register_form_email_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3px"
                android:background="@drawable/login_form_edittext"
                android:hint="@string/member_form_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="#656565"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/register_form_email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/member_form_email_error"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/register_form_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_form"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3px"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_login_name" />

            <EditText
                android:id="@+id/register_form_name_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3px"
                android:background="@drawable/login_form_edittext"
                android:hint="@string/member_form_name_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="#656565"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/register_form_name_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/member_form_email_error"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/register_form_pw"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3px"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_login_password" />

            <EditText
                android:id="@+id/register_form_pw_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3px"
                android:background="@drawable/login_form_edittext"
                android:hint="@string/member_form_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="#656565"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/register_form_pw_field_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/member_form_password_error"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/register_form_re_pw"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_form"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3px"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_login_repw" />

            <EditText
                android:id="@+id/register_form_re_pw_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="3px"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3px"
                android:background="@drawable/login_form_edittext"
                android:hint="@string/member_form_re_pw_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="#656565"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/register_form_re_pw_field_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/member_form_repw_error"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/register_form_register_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register_form_register_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
